--- a/app/views/super_admin/accounts/index.html.erb
+++ b/app/views/super_admin/accounts/index.html.erb
@@ -141,7 +141,7 @@
               <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium <%= %i[team business].include?(plan_key) ? 'bg-indigo-100 text-indigo-800' : plan_key == :trial ? 'bg-yellow-100 text-yellow-800' : 'bg-gray-100 text-gray-800' %>">
                 <%= effective_plan %>
               </span>
-              <% if account.current_plan != plan_key.to_s && account.current_plan != 'developer' %>
+              <% if account.current_plan != plan_key.to_s && !account.current_plan.in?(%w[developer trial]) %>
                 <div class="mt-0.5 text-xs text-gray-400" title="Database value: <%= account.current_plan %>">
                   (db: <%= account.current_plan %>)
                 </div>
