--- a/app/views/quota_alert_mailer/free_plan_upgrade_reminder.html.erb
+++ b/app/views/quota_alert_mailer/free_plan_upgrade_reminder.html.erb
@@ -195,7 +195,7 @@
 
       <div class="button-wrapper">
         <a href="<%= @usage_url %>" class="button-secondary">View Usage</a>
-        <a href="<%= @upgrade_url %>" class="button">Upgrade to Team Plan</a>
+        <a href="<%= @upgrade_url %>" class="button">Upgrade Plan</a>
       </div>
     </div>
 
